2004-11-27  Hans Breuer  <hans@breuer.org>

	* app/filedlg.c(file_save_callback) : convert to
	filename encoding before passing to diagram_save()
	Fixes bug #158381, thanks to Robert Ögren

2004-11-27  Hans Breuer  <hans@breuer.org>

	* lib/dialibartrenderer.c : sometimes its good to read
	compiler warnings. Not only define renderer_finalize
	but actually *use* it. Should plug a potential huge
	memory leak.

	* configure.in plug-ins/Makefile.am 
	  plug-ins/gprint/Makefile.am : build the experimental
	gnomeprint plug-in on *NIX, too.
	* plug-ins/gprint/diagnomeprint.c : don't include
	specific (private) backend headers but instead select
	the desired backend via config key setting

	* lib/diagdkrenderer.c : add 1 to size of filled arc 
	to be rendered by gdk. Fixes bug #150896.

	* plug-ins/gprint/diagnomeprint.c 
	  plug-ins/gprint/diagnomeprintrenderer.c : added magic
	to better match page and dash sizes

2004-11-27  Hans Breuer  <hans@breuer.org>

	* plug-ins/shape/shape-export.c : it's g_strdup_printf

2004-11-27  Hans Breuer  <hans@breuer.org>

	* app/app_procs.c : mention eps-builtin aka. "using
	latin1", does not fix the eps-pango issues but #150571

2004-11-27  Hans Breuer  <hans@breuer.org>

	* sheets/Cybernetics.sheet.in : changed encoding to 
	utf-8, patch from Takeshi AIHANA, fixes #149580

2004-11-27  Hans Breuer  <hans@breuer.org>

	* objects/custom/custom_object.c : many existing shapes
	rely on a square default size, revert to it although
	it originally was by a typo. Fixes bug #148527.

2004-11-27  Hans Breuer  <hans@breuer.org>

	* app/load_save.c(dia_cleanup_autosave) 
	  app/diagram.c : don't use dia->filename if already 
	freed and dont use printf at all.

	* app/paginate_psprint.c : not only set the renderer::paper
	but also renderer::is_portrait. Should fix bug #142524

2004-11-26  Hans Breuer  <hans@breuer.org>

	* dia.desktop.in : added Bug Buddy headers (as seen
	in planner). Hopefully the automatically filling of